[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ConsolePrint"
version = "1.3.9"
authors = [
  { name="Udemezue Iloabachie", email="udemezue@gmail.com" },
]
description = "A package to animate and beautify print output to console"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/iloabachie/ConsolePrint"
"Bug Tracker" = "https://github.com/iloabachie/ConsolePrint/issues"